marked 1.1.12 3 August 2016
-----------------
NEW FEATURES

* parameter pi has been added to MVMSCJS model. Including pi allows the initial 
state at release to be uncertain. See ?initiate_pi for more details. initiate_pi is called
from make.design.data for MVMSCJS models so existing code can be run without modification.

* modified mscjs and multistate.tpl file so fixed parameters can be included and design
matrix can be simplified to speed up execution times.

* added function setup_admb to simplify calling code like cjs and mscjs and standardize handling
of compile, clean arguments and use of existing admb executables in the marked package directory.

* created an ADMB version of the mvms model with simplified design matrix to speed up execution times. The sealion example runs in 1/10 of the time if use.admb=TRUE is set.

CHANGES

* pull request merged from Brett McClintock for probit.cjs. Changes Bayesian updating.

* all values for a parameter can be fixed (e.g., S=1 or delta=1). This used to cause problems but now if
all values are fixed, a message is given that the formula is being reset to ~0 which has no parameters. Likewise,
if formula is ~0 and not all values are fixed then an error is generated. 

* The above change made it possible to allow an mvmscjs specification in which all states are certain. In which case,
no design data is generated for the delta parameter.

* global_decode now requires ddl argument to be specified and does not compute on the fly.

* changed AIC calculation for use.admb=T to use only number of fixed effect estimates plus number of random effect sigma values.


marked 1.1.11 7 March 2016
-----------------

NEW FEATURES

* can now add sigmaPhi and sigmap to list of initial values for random effects CJS model. If none are specified, initial values are now set to -2 instead of 0.1

BUG FIXES

* patched create.dm which was leaving out one record when chunking through design data. This caused failure when using splines.
